# agentic-ph-stocks-advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: develop-ci.yml  main-ci-cd.yml
admin/: Dockerfile  app.py  requirements.txt
infra/azure/: deploy.sh  main.bicep  main.bicepparam  teardown.sh
ph_stocks_advisor/: export_html.py  export_pdf.py  main.py
ph_stocks_advisor/agents/: __init__.py  consolidator.py  portfolio.py  prompts.py  specialists.py  web_search_tools.py
ph_stocks_advisor/data/: __init__.py  candlestick.py  controversy_service.py  dividend_service.py  dragonfi.py  models.py  movement_service.py  price_service.py  pse_edge.py  tavily_search.py  tools.py  tradingview.py  valuation_service.py
ph_stocks_advisor/data/analysis/: __init__.py  candlestick.py
ph_stocks_advisor/data/clients/: __init__.py  dragonfi.py  pse_edge.py  pse_edge_company_dividends.py  pse_edge_dividends.py  tavily_search.py  tradingview.py
ph_stocks_advisor/data/services/: __init__.py  controversy.py  dividend.py  movement.py  price.py  sentiment.py  valuation.py
ph_stocks_advisor/export/: __init__.py  formatter.py  html.py  pdf.py
ph_stocks_advisor/graph/: __init__.py  workflow.py
ph_stocks_advisor/infra/: __init__.py  config.py  repository.py  repository_postgres.py  repository_sqlite.py
ph_stocks_advisor/web/: __init__.py  app.py  auth.py  celery_app.py  progress.py  rate_limit.py  tasks.py  worker.py
ph_stocks_advisor/web/static/: app.js  portfolio.js  report-viz.js  style.css
ph_stocks_advisor/web/templates/: base.html  history.html  index.html  login.html  no_report.html  report.html
tests/: conftest.py  dummy_responses.py  test_agents.py  test_auth.py  test_company_dividends.py  test_consolidator.py  test_dedup.py  test_export.py  test_export_html.py  test_graph.py  test_healthz.py  test_models.py  test_portfolio.py  test_rate_limit.py  test_repository.py  test_sse.py  test_tools.py  test_trajectory.py  test_user_type.py
