[project]
name = "ph-stocks-advisor"
version = "0.1.0"
description = "Agentic AI Philippine Stock Market Advisor"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "yfinance>=0.2",
    "python-dotenv>=1.0",
    "fpdf2>=2.8",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
ph-advisor = "ph_stocks_advisor.main:main"
ph-advisor-pdf = "ph_stocks_advisor.export_pdf:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
