[project]
name = "ph-stocks-advisor"
version = "0.1.0"
description = "Agentic AI Philippine Stock Market Advisor"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fpdf2>=2.8",
    "tavily-python>=0.5",
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "flask>=3.0",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "msal>=1.28",
    "flask-session>=0.5",
    "gunicorn>=22.0",
    "gevent>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "pyright>=1.1",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
ph-advisor = "ph_stocks_advisor.main:main"
ph-advisor-pdf = "ph_stocks_advisor.export.pdf:main"
ph-advisor-html = "ph_stocks_advisor.export.html:main"
ph-advisor-web = "ph_stocks_advisor.web.app:main"

[tool.setuptools.packages.find]
include = ["ph_stocks_advisor*"]

[tool.setuptools.package-data]
ph_stocks_advisor = [
    "web/templates/**/*.html",
    "web/static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that make real LLM / network calls (deselect with '-m \"not integration\"')",
]

# ── Ruff ──────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101", # assert used in tests is fine
    "S105", # hardcoded password false positives in config defaults
    "S106", # same
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

# ── Pyright ────────────────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["ph_stocks_advisor/", "tests/"]
exclude = ["admin/"]
